change cdn to local with build and server changes, fix main controller

--- a/src/app/mhsearch/mhsearch.html
+++ b/src/app/mhsearch/mhsearch.html
@@ -48,7 +48,8 @@
                                         </md-input-container>
 
                                         <div style="width: 125px;">
-                                            <md-autocomplete  flex="" required="" ng-model="formSearch.trainId" ng-disabled="formSearch.isLoading"
+                                            <md-autocomplete  flex="" required="" ng-model="formSearch.trainId"
+                                                              ng-disabled="formSearch.isLoading"
                                                               md-input-name="autocompleteTrainId" md-min-length="0"
                                                               md-selected-item="selectedTrainId"
                                                               md-selected-item-change="selectedTrainIdChange(trainId)"
