--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,8 +9,12 @@
 
     <div id="mainpage-content" class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
+            <div class="col-md-12" ng-include src="'components/alert/alert.html'"></div>
+
             <div class="col-lg-12">
+
                 <div class="ibox float-e-margins">
+
                     <div class="ibox-title main-page-tips">
                         <div class="row" style="margin-top: 5px;">
                             <table class="col-lg-12 table-stripped">
