--- a/src/index.css
+++ b/src/index.css
@@ -3826,6 +3826,7 @@ md-input-container.md-input-has-value .md-select-value > span:not(.md-select-ico
     box-sizing: content-box;
     min-width: 64px;
     min-height: 26px;
+    color: rgba(0,0,0,0.87);
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     flex-grow: 1; }
@@ -3836,7 +3837,7 @@ md-input-container.md-input-has-value .md-select-value > span:not(.md-select-ico
     flex: 1 1 auto;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden; }
+    overflow: hidden;}
 .md-select-value > span:not(.md-select-icon) .md-text {
     display: inline; }
 .md-select-value .md-select-icon {
