--- a/src/app/drivingtable/drivingtable.html
+++ b/src/app/drivingtable/drivingtable.html
@@ -10,7 +10,7 @@
         </md-button>
     </div>
 </div>
-<div class="real-content wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
